--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ transformers>=4.30.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 wcwidth==0.2.13
-Werkzeug==3.1.3
 torch>=2.0.0
-flask>=2.0.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
 gunicorn>=20.1.0
-faiss-gpu>=1.7.2
+faiss-cpu>=1.7.2
+# faiss-gpu>=1.7.2
 numpy>=1.21.0
+pydantic>=1.8.0
