--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+runpod>=0.9.0
 numba==0.60.0
 googletrans==4.0.0rc1
 sentence-splitter==1.4
@@ -12,7 +13,7 @@ torch>=2.0.0
 fastapi>=0.68.0
 uvicorn>=0.15.0
 gunicorn>=20.1.0
-faiss-cpu>=1.7.2
-# faiss-gpu>=1.7.2
+faiss-gpu>=1.7.2
+# faiss-cpu>=1.7.2
 numpy>=1.21.0
 pydantic>=1.8.0
